# media-kit

./: .clang-format  .gitignore  .gitmodules  .tool-versions  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  melos.yaml  pubspec.yaml
.dart_tool/: package_config.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml
docs/: getting_started.md
example/: cli.dart  directory.dart  libmpv_example.dart  minimal.dart  player.dart  raw.dart  tagger.dart  youtube.dart
lib/: libmpv.dart  media_kit.dart
lib/src/: dynamic_library.dart  fallback_bitrate_handler.dart  flac_bitrate_fallback.dart  initializer.dart  platform_player.dart  player.dart  tagger.dart
libs/linux/media_kit_libs_linux/linux/: CMakeLists.txt  media_kit_libs_linux_plugin.cc
libs/linux/media_kit_libs_linux/linux/include/media_kit_libs_linux/: media_kit_libs_linux_plugin.h
libs/windows/media_kit_libs_windows_audio/windows/: CMakeLists.txt  media_kit_libs_windows_audio_plugin_c_api.cpp
libs/windows/media_kit_libs_windows_audio/windows/include/media_kit_libs_windows_audio/: media_kit_libs_windows_audio_plugin_c_api.h
libs/windows/media_kit_libs_windows_video/windows/: CMakeLists.txt  media_kit_libs_windows_video_plugin_c_api.cpp
libs/windows/media_kit_libs_windows_video/windows/include/media_kit_libs_windows_video/: media_kit_libs_windows_video_plugin_c_api.h
media_kit/: .gitignore  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
media_kit/example/: README.md  cli.dart  directory.dart  main.dart  player.dart  tagger.dart
media_kit/lib/: media_kit.dart
media_kit_core_audio/: .metadata  CHANGELOG.md  README.md  pubspec.yaml
media_kit_core_audio/example/: pubspec.yaml
media_kit_core_audio/windows/: CMakeLists.txt
media_kit_core_video/: README.md  pubspec.yaml
media_kit_core_video/lib/: media_kit_core_video.dart  media_kit_core_video_method_channel.dart  media_kit_core_video_platform_interface.dart  video.dart  video_controller.dart
media_kit_core_video/windows/: CMakeLists.txt  angle_surface_manager.cc  angle_surface_manager.h  media_kit_core_video_plugin.cc  media_kit_core_video_plugin.cpp  media_kit_core_video_plugin.h  media_kit_core_video_plugin_c_api.cc  video_output.cc  video_output.h  video_output_manager.cc  video_output_manager.h
media_kit_core_video/windows/include/media_kit_core_video/: media_kit_core_video_plugin_c_api.h
media_kit_libs_android_audio/: CHANGELOG.md  pubspec.yaml
media_kit_libs_android_audio/android/: build.gradle
media_kit_libs_android_audio/example/: README.md
media_kit_libs_android_video/: CHANGELOG.md  README.md  pubspec.yaml
media_kit_libs_android_video/android/: build.gradle
media_kit_libs_android_video/example/: README.md
media_kit_libs_ios_audio/: README.md
media_kit_libs_ios_audio/example/: README.md
media_kit_libs_ios_audio/ios/: Makefile
media_kit_libs_ios_video/: CHANGELOG.md  README.md  pubspec.yaml
media_kit_libs_ios_video/example/: README.md
media_kit_libs_ios_video/ios/: .gitignore  Makefile  media_kit_libs_ios_video.podspec
media_kit_libs_linux/: .metadata  CHANGELOG.md  README.md  pubspec.yaml
media_kit_libs_linux/example/: README.md
media_kit_libs_linux/linux/: CMakeLists.txt  media_kit_libs_linux_plugin.cc
media_kit_libs_macos/: README.md  pubspec.yaml
media_kit_libs_macos/macos/: Makefile  media_kit_libs_macos.podspec
media_kit_libs_macos_audio/: README.md  pubspec.yaml
media_kit_libs_macos_audio/example/: README.md
media_kit_libs_macos_audio/macos/: Makefile  media_kit_libs_macos_audio.podspec
media_kit_libs_macos_video/: CHANGELOG.md  README.md  pubspec.yaml
media_kit_libs_macos_video/example/: README.md
media_kit_libs_macos_video/macos/: .gitignore  Makefile  media_kit_libs_macos_video.podspec
media_kit_libs_windows_audio/: .metadata  CHANGELOG.md  README.md  pubspec.yaml
media_kit_libs_windows_audio/example/: README.md
media_kit_libs_windows_audio/windows/: CMakeLists.txt  media_kit_libs_windows_audio_plugin_c_api.cpp
media_kit_libs_windows_video/: .metadata  CHANGELOG.md  README.md  pubspec.yaml
media_kit_libs_windows_video/example/: README.md
media_kit_libs_windows_video/windows/: CMakeLists.txt
media_kit_native_event_loop/: .metadata  CHANGELOG.md  README.md  pubspec.yaml
media_kit_native_event_loop/example/: README.md
media_kit_native_event_loop/ios/: media_kit_native_event_loop.podspec
media_kit_native_event_loop/linux/: CMakeLists.txt
media_kit_native_event_loop/macos/: Makefile  media_kit_native_event_loop.podspec
media_kit_native_event_loop/src/: CMakeLists.txt  dart_api_types.h  media_kit_native_event_loop.cc  media_kit_native_event_loop.h
media_kit_native_event_loop/windows/: CMakeLists.txt
media_kit_test/: .gitignore  .metadata  README.md  pubspec.yaml  pubspec_overrides.yaml
media_kit_video/: .metadata  CHANGELOG.md  README.md  pubspec.yaml  pubspec_overrides.yaml
media_kit_video/linux/: CMakeLists.txt  gl_render_thread.cc  media_kit_video_plugin.cc  texture_gl.cc  texture_sw.cc  utils.cc  video_output.cc  video_output_gl.cc  video_output_manager.cc
media_kit_video/linux/include/media_kit_video/: gl_render_thread.h  media_kit_video_plugin.h  texture_gl.h  texture_sw.h  thread_pool.h  utils.h  video_output.h  video_output_gl.h  video_output_manager.h
media_kit_video/windows/: CMakeLists.txt  angle_surface_manager.cc  angle_surface_manager.h  d3d11_renderer.cc  d3d11_renderer.h  media_kit_video_plugin.cc  media_kit_video_plugin.h  media_kit_video_plugin_c_api.cc  thread_pool.h  utils.cc  utils.h  video_output.cc  video_output.h  video_output_manager.cc  video_output_manager.h
media_kit_video/windows/include/media_kit_video/: media_kit_video_plugin_c_api.h
media_kit_video_controls/: .flutter-plugins  .flutter-plugins-dependencies  .metadata  CHANGELOG.md  README.md  pubspec.yaml
tools/: update_darwin_libmpv_artifacts.sh
video_player_media_kit/: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml  pubspec_overrides.yaml  regex.txt
(+584 files in other folders)
